fix overflow hidden formcontrol

--- a/src/app/modules/management-lead/lead-information/lead-information.component.scss
+++ b/src/app/modules/management-lead/lead-information/lead-information.component.scss
@@ -57,7 +57,7 @@
 /* Custom style Module Material */
 
 .mat-mdc-form-field {
-    width: 100% !important;
+    width: 99.9% !important;
 }
 
 .mat-mdc-tab-group,
